# BufferFlowX

./: .gitignore  README.md  README_CN.md
.github/: codecov.yml
.github/workflows/: ci.yml
bfx/: bfx_cmake_util.cmake
bfx/bootloader/: README_zhCN.md  design.md
bfx/cli/: README_zhCN.md  bfx_cli_at.c  bfx_cli_at.h  bfx_cli_core.c  bfx_cli_raw.c  bfx_cli_raw.h  bfx_cli_unix.c  bfx_cli_unix.h  design.md
bfx/common/: bfx_def.h
bfx/dfifo/: bfx_dfifo_raw.h
bfx/double_fifo/: README_zhCN.md
bfx/fsm/: README_zhCN.md  bfx_fsm.c  bfx_fsm.h  bfx_puml_generate_id.py  bfx_puml_translate.py  (+2 more)
test/: CMakeLists.txt  readme.md
test/CI/: codecov.yml
test/lib/: gtest_cov.cmake
test/script/: framework_setup.sh  testcase_build.ps1  testcase_build.sh  testcase_run.ps1  testcase_run.sh
test/testcase/: FsmTest.puml  cli_core.cpp  cli_raw.cpp  fsm.cpp  l2proto.cpp  siso_fifo_nosplit.cpp  siso_fifo_split.cpp
test/tool_testcase/: raw_clean.ps1  raw_run.ps1  run_test.ps1  run_test.sh
test/tool_testcase/section/: basic_parse.ld  linker_with_comments.ld  pytest_ut_collect_section.py  pytest_ut_get_region.py  top_level_bfx.yml
test/tool_testcase/section/conflict_in_diff_dir/: stm32cubemx.ld
test/tool_testcase/section/conflict_in_diff_dir/driver/uart2/: uart2_bfx.yml
test/tool_testcase/section/conflict_in_same_dir/driver/: uart1_bfx.yml
test/tool_testcase/section/invalid/: bfx.yml
test/tool_testcase/section/multi_component/component1/: bfx.yml
test/tool_testcase/section/multi_component/component1/sub_comp/: bfx.yml
test/tool_testcase/section/multi_component/component2/: bfx.yml
test/tool_testcase/section/multi_component/driver/: bfx.yml
test/tool_testcase/section/multi_component/output/: copy_sections.c  copy_sections.json  generated.ld  regions.json  sections.json  stm32cubemx.ld.bfx
test/tool_testcase/section/subdir/: bfx.yml
test/tool_testcase/section/subdir2/: bfx.yml
(+35 files in other folders)
